# InvoiceFlowBot

./: .coveragerc  .dockerignore  .env.example  .gitignore  .lycheeignore  .markdownlint.json  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  README.ru.md  alembic.ini  bandit.yaml  bot.py  config.py  context_gen.py  docker-compose.yml  exit  healthcheck.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  coverage.yml  docker-compose.yml  docker.yml  docs.yml  release.yml  security.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
backend/: alembic.ini  healthcheck.py
backend/alembic/: env.py
backend/core/: container.py
backend/domain/: drafts.py
backend/handlers/: callback_registry.py  callbacks.py  callbacks_edit.py  callbacks_misc.py  commands.py  commands_common.py  commands_drafts.py  commands_invoices.py  deps.py  di_middleware.py  file.py  fsm.py  utils.py
backend/ocr/: __init__.py  async_client.py  extract.py  mindee_client.py
backend/ocr/engine/: router.py  types.py  util.py
backend/ocr/providers/: __init__.py  base.py  mindee_provider.py
backend/services/: draft_service.py  invoice_service.py
backend/storage/: db.py  db_async.py  drafts_async.py  mappers.py
core/: __init__.py  container.py
docker/: entrypoint.sh
docs/adr/: 0001-mindee-as-primary-ocr-provider.md  0002-sqlite-as-primary-storage.md  0003-aiogram3-as-telegram-framework.md  0004-backend-folder-structure.md
docs/en/: architecture.md  config.md  configuration.md  database.md  development.md  index.md  logging.md  overview.md  screenshots.md  scripts.md  setup-docker.md  setup-local.md  tests.md  troubleshooting.md  usage.md
docs/ru/: architecture.md  config.md  configuration.md  database.md  development.md  index.md  logging.md  overview.md  screenshots.md  scripts.md  setup-docker.md  setup-local.md  tests.md  troubleshooting.md  usage.md
domain/: __init__.py  drafts.py  invoices.py
handlers/: __init__.py  callback_registry.py  callbacks.py  callbacks_edit.py  callbacks_misc.py  commands.py  commands_common.py  commands_drafts.py  commands_invoices.py  deps.py  di_middleware.py  file.py  fsm.py  state.py  utils.py
ocr/: __init__.py  async_client.py  extract.py  mindee_client.py
ocr/engine/: router.py  types.py  util.py
ocr/providers/: __init__.py  base.py  mindee_provider.py
scripts/linux/: format.sh  lint.sh  migrate.sh  run.sh  setup.sh  test.sh
scripts/python/: context_gen.py  format.py  lint.py  migrate.py  run.py  setup.py  test.py
scripts/windows/: format.ps1  lint.ps1  migrate.ps1  run.ps1  setup.ps1  test.ps1
services/: __init__.py  async_utils.py  draft_service.py  invoice_service.py
storage/: __init__.py  db.py  db_async.py  drafts_async.py  mappers.py
tests/: conftest.py  test_db_async_equivalence.py  test_di_container.py  test_draft_service.py  test_engine_utilities.py  test_imports.py  test_invoice_parsing.py  test_invoice_service.py  test_storage_dates.py
tests/core/: __init__.py  test_container.py  test_container_middleware.py
tests/domain/: __init__.py  test_invoice.py  test_invoice_comment.py  test_invoice_header.py  test_invoice_item.py  test_invoice_source_info.py
tests/fakes/: __init__.py  fake_fsm.py  fake_ocr.py  fake_services.py  fake_services_drafts.py  fake_storage.py  fake_telegram.py
tests/handlers/: __init__.py  test_callbacks_edit.py  test_callbacks_misc.py  test_commands_basic.py  test_commands_drafts.py  test_commands_invoices_force_reply.py  test_deps.py  test_file_upload_happy.py  test_file_upload_negative.py  test_handlers_wiring.py
tests/integration/: test_flow_ocr_draft_save.py
tests/ocr/: test_async_client.py  test_extract.py  test_router.py
tests/storage/: test_mappers.py  test_storage_invoices_crud.py  test_storage_migrations.py
tests/utils/: alembic_test_utils.py
