[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "invoiceflowbot"
version = "0.4.0"
description = "Telegram bot for processing invoices via OCR and storing them in SQLite"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "Ama", email = "amalsdev367@gmail.com" },
]
dependencies = [
    "aiogram>=3.10",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.1",
    "Pillow>=10.4.0",
    "mindee>=4.27.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pre-commit",
    "bandit",
    "pip-audit",
    "types-requests",
]

[project.scripts]
invoiceflowbot = "bot:main"

[project.urls]
repository = "https://github.com/AmaLS367/InvoiceFlowBot"
documentation = "https://github.com/AmaLS367/InvoiceFlowBot/blob/main/docs/README.md"
issues = "https://github.com/AmaLS367/InvoiceFlowBot/issues"
changelog = "https://github.com/AmaLS367/InvoiceFlowBot/blob/main/CHANGELOG.md"
contributing = "https://github.com/AmaLS367/InvoiceFlowBot/blob/main/CONTRIBUTING.md"
license = "https://github.com/AmaLS367/InvoiceFlowBot/blob/main/LICENSE"

[tool.setuptools]
packages = [
    "backend",
    "backend.core",
    "backend.domain",
    "backend.services",
    "backend.ocr",
    "backend.storage",
    "backend.handlers",
]

py-modules = ["backend.config", "bot"]

[tool.pytest.ini_options]
markers = [
    "storage_db: integration tests for storage with real SQLite and Alembic migrations",
]
addopts = [
    "--cov=backend",
    "--cov-config=.coveragerc",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
allow_redefinition = false
strict_optional = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "backend.handlers.*"
ignore_errors = false

[[tool.mypy.overrides]]
module = "backend.ocr.*"
ignore_errors = false

[[tool.mypy.overrides]]
module = "backend.services.*"
ignore_errors = false

[[tool.mypy.overrides]]
module = "backend.storage.*"
ignore_errors = false

[[tool.mypy.overrides]]
module = "backend.domain.*"
ignore_errors = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
